Recreated project with asp.net identity enabled

--- a/IdentitySample/appsettings.json
+++ b/IdentitySample/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentitySample-c01aedfe-7818-4c98-baed-b262e78c9ad2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
