--- a/IdentitySample/Properties/launchSettings.json
+++ b/IdentitySample/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11551/",
+      "applicationUrl": "http://localhost:11805/",
       "sslPort": 0
     }
   },
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:11552"
+      "applicationUrl": "http://localhost:11806"
     }
   }
 }
