--- a/IdentitySample/appsettings.json
+++ b/IdentitySample/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentitySample-c01aedfe-7818-4c98-baed-b262e78c9ad2;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "ConnectionStrings": {
+        "ConnectionName": "Filename=./identity.sqlite"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        }
     }
-  }
 }
